--- a/public/partials/blog.html
+++ b/public/partials/blog.html
@@ -23,7 +23,7 @@
                                </div>
                                <div class="caption-overlay">
                                     <div class="caption-title">
-                                        Brag Pitch III: Oh Sh*t, This Was a Terrible Idea
+                                        Brag Pitch III: Oh Sh*t, This Was A Terrible Idea
                                     </div>
                                     <div class="author">
                                         Andrea Bouch
@@ -135,7 +135,7 @@
                                    </div>
                                    <div class="caption-overlay">
                                         <div class="caption-title">
-                                            Fears of The Virgin Entrepreneur
+                                            Fears Of The Virgin Entrepreneur
                                         </div>
                                         <div class="author">
                                         </div>
@@ -218,7 +218,7 @@
                                        </div>
                                        <div class="caption-overlay">
                                             <div class="caption-title">
-                                                5 Tips For Surviving Startup Life as a Couple
+                                                5 Tips For Surviving Startup Life As A Couple
                                             </div>
                                             <div class="author">
                                                 Catalina Jaramillo
@@ -387,7 +387,7 @@
                                                    </div>
                                                    <div class="caption-overlay">
                                                         <div class="caption-title">
-                                                            Percentage Of Tech Companies Started By Women? A Scant 3%
+                                                            Tech Companies Started By Women Is A Scant 3%
                                                         </div>
                                                         <div class="author">
                                                             Jen Lee
