--- a/public/partials/connect.html
+++ b/public/partials/connect.html
@@ -7,15 +7,15 @@
             <div class="col-md-12 section-intro">
                 <p>Stay updated on what we're up to and our events around the world, read original blogs written by the members of FEW, and engage in meaningful discussions about gender equality and entrepreneurship. Let's keep in touch!</p>
 
-                <p>— <a href="http://medium.com/@holafew">Our Blog on Medium</a></p>
-                <p>— <a href="http://twitter.com/holafew">Twitter</a></p>
-                <p>— <a href="http://facebook.com/holafew">Facebook</a></p>
-                <p>— <a href="http://http://www.linkedin.com/company/female-entrepreneurs-of-the-world">LinkedIn</a></p>
-                <p>— <a href="mailto:holafew@gmail.com">Email</a></p>
+                <p>— <a href="http://medium.com/@holafew" target="_blank">Our Blog on Medium</a></p>
+                <p>— <a href="http://twitter.com/holafew" target="_blank">Twitter</a></p>
+                <p>— <a href="http://facebook.com/holafew" target="_blank">Facebook</a></p>
+                <p>— <a href="http://www.linkedin.com/company/female-entrepreneurs-of-the-world" target="_blank">LinkedIn</a></p>
+                <p>— <a href="mailto:holafew@gmail.com" target="_blank">Email</a></p>
                 
-                <p>For press inquiries, general questions, or if you're interested in becoming a principal of FEW, please <a href="mailto:holafew@gmail.com">email us</a>.</p>
+                <p>For press inquiries, general questions, or if you're interested in becoming a principal of FEW, please <a href="mailto:holafew@gmail.com" target="_blank">email us</a>.</p>
                 
-                <p style="font-style:italic;'">ProjectFEW.org was designed and developed by the creators behind <a href="http://www.webcassette.com">Web Cassette</a>. The code for this site is freely available under the MIT Open Source Initiative on <a href="https://github.com/jenklee/few">GitHub</a>.</p>
+                <p style="font-style:italic;'">ProjectFEW.org was designed and developed by the creators behind <a href="http://www.webcassette.com" target="_blank">Web Cassette</a>. The code for this site is freely available under the MIT Open Source Initiative at <a href="https://github.com/jenklee/few" target="_blank">GitHub</a>.</p>
             
             </div>
         </div>
