--- a/public/partials/mission.html
+++ b/public/partials/mission.html
@@ -7,11 +7,11 @@
             <div class="col-md-12 section-intro">
                 <p>Female Entrepreneurs of the World (FEW) is an international organization that supports gender equality and the advancement of women in entrepreneurship. FEW provides a community for entrepreneurs to share experiences in the hopes that transparency of information will inspire others in their entrepreneurial journey.</p>
 
-                <p>FEW was formed by a self-organized group of female founders from around the world who met through <a href="startupchile.org">Startup Chile</a>. Members of FEW organize workshops, share resources openly, and discuss gender bias, entrepreneurship, and founder dilemmas through regularly published blog articles.</p>
+                <p>FEW was formed by a self-organized group of female founders from around the world who met through <a href="http://startupchile.org" target="_blank">Startup Chile</a>. Members of FEW organize workshops, share resources openly, and discuss gender bias, entrepreneurship, and founder dilemmas through regularly published blog articles.</p>
 
-                <p>FEW is by no means a female-only organization and welcomes all members regardless of race or gender. Men in particular have been actively involved in since its inception, contributing blog articles and actively participating in events organized by FEW.</p>
+                <p>FEW is by no means a female-only organization and welcomes all members regardless of race or gender. Men have been actively involved since its inception, contributing blog articles and actively participating in events organized by FEW.</p>
 
-                <p>For press inquiries or general questions, please feel free to send us an <a href="mailto:holafew@gmail.com">email</a>.</p>
+                <p>For press inquiries or general questions, please feel free to send us an <a href="mailto:holafew@gmail.com" target="_blank">email</a>.</p>
             </div>
         </div>
         <div class="row">
