--- a/public/partials/principals.html
+++ b/public/partials/principals.html
@@ -13,7 +13,7 @@
                     </a>
                     <div class="media-body">
                         <p class="media-heading principal-name">
-                            <a href="http://www.linkedin.com/in/andreabouch">Andrea Bouch</a>
+                            <a href="http://www.linkedin.com/in/andreabouch" target="_blank">Andrea Bouch</a>
                         </p>
                         <p class="principal-city">San Francisco, CA</p>
                         <p class="principal-city">United States</p>
@@ -30,7 +30,7 @@
                     </a>
                     <div class="media-body">
                         <p class="media-heading principal-name">
-                            <a href="http://www.linkedin.com/in/allisoncarmen">Allison Carmen</a>
+                            <a href="http://www.linkedin.com/in/allisoncarmen" target="_blank">Allison Carmen</a>
                         </p>
                         <p class="principal-city">Saint Louis, MS</p>
                         <p class="principal-city">United States</p>
@@ -49,7 +49,7 @@
                     </a>
                     <div class="media-body">
                         <p class="media-heading principal-name">
-                            <a href="http://ca.linkedin.com/pub/danielle-carruthers/1b/264/845">Danielle Carruthers</a>
+                            <a href="http://ca.linkedin.com/pub/danielle-carruthers/1b/264/845" target="_blank">Danielle Carruthers</a>
                         </p>
                         <p class="principal-city">Calgary</p>
                         <p class="principal-city">Canada</p>
@@ -66,7 +66,7 @@
                     </a>
                     <div class="media-body">
                         <p class="media-heading principal-name">
-                            <a href="http://cl.linkedin.com/in/komaldadlani">Komal Dadlani</a>
+                            <a href="http://cl.linkedin.com/in/komaldadlani" target="_blank">Komal Dadlani</a>
                         </p>
                         <p class="principal-city">Santiago</p>
                         <p class="principal-city">Chile</p>
@@ -85,7 +85,7 @@
                     </a>
                     <div class="media-body">
                         <p class="media-heading principal-name">
-                            <a href="http://ca.linkedin.com/pub/sarah-h%C3%A9bert/55/868/338">Sarah Hébert</a>
+                            <a href="http://ca.linkedin.com/pub/sarah-h%C3%A9bert/55/868/338" target="_blank">Sarah Hébert</a>
                         </p>
                         <p class="principal-city">San Pedro La Laguna</p>
                         <p class="principal-city">Guatemala</p>
@@ -102,7 +102,7 @@
                     </a>
                     <div class="media-body">
                         <p class="media-heading principal-name">
-                            <a href="http://www.linkedin.com/in/leejen">Jen Lee (Founder)</a>
+                            <a href="http://www.linkedin.com/in/leejen" target="_blank">Jen Lee (Founder)</a>
                         </p>
                         <p class="principal-city">San Francisco, CA</p>
                         <p class="principal-city">United States</p>
@@ -122,7 +122,7 @@
                     </a>
                     <div class="media-body">
                         <p class="media-heading principal-name">
-                            <a href="http://ve.linkedin.com/pub/lissette-rojas/0/825/536">Lissette Rojas</a>
+                            <a href="http://ve.linkedin.com/pub/lissette-rojas/0/825/536" target="_blank">Lissette Rojas</a>
                         </p>
                         <p class="principal-city">Caracas</p>
                         <p class="principal-city">Venezuela</p>
@@ -139,7 +139,7 @@
                     </a>
                     <div class="media-body">
                         <p class="media-heading principal-name">
-                            <a href="http://www.linkedin.com/pub/aparna-sud/5a/962/875">Aparna Sud</a>
+                            <a href="http://www.linkedin.com/pub/aparna-sud/5a/962/875" target="_blank">Aparna Sud</a>
                         </p>
                         <p class="principal-city">Boston, MA</p>
                         <p class="principal-city">United States</p>
@@ -158,7 +158,7 @@
                     </a>
                     <div class="media-body">
                         <p class="media-heading principal-name">
-                            <a href="http://cl.linkedin.com/pub/andre%C3%ADna-zulueta/32/622/140/en">Andreina Zulueta</a>
+                            <a href="http://cl.linkedin.com/pub/andre%C3%ADna-zulueta/32/622/140/en" target="_blank">Andreina Zulueta</a>
                         </p>
                         <p class="principal-city">Santiago</p>
                         <p class="principal-city">Chile</p>
@@ -174,7 +174,7 @@
                     ng-show="showDescription">
                     <p>Becoming a principal is a commitment to <a ng-href="/mission">FEW’s mission</a>, and a larger opportunity to bring people together from all walks of life to discuss issues surrounding gender equality and entrepreneurship. We ask, on a yearly basis, that principals organize one event, contribute an original thought piece to our blog, and share relevant news and updates with the world through your own social networks.</p>
 
-                    <p>If you’re interested in becoming a principal for F-E-W, please <a href="mailto:holafew@gmail.com">email</a> us. We look forward to hearing from you!</p>
+                    <p>If you’re interested in becoming a principal for F-E-W, please <a href="mailto:holafew@gmail.com" target="_blank">email</a> us. We look forward to hearing from you!</p>
                 </div>
             </div>
         </div>
