--- a/public/partials/statistics.html
+++ b/public/partials/statistics.html
@@ -24,7 +24,7 @@
         
         <div class="col-md-4">
             <div class="center-block stat-column">            
-                <div class="stat-header">Representing Countries</div>
+                <div class="stat-header">{{countries.length}} Countries Represented</div>
                 <ul class="list-unstyled">
                     <li ng-repeat="country in countries"
                         class="stat-list">
