--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -34,19 +34,20 @@ a h3 {
 h5 {
     font-weight: 400;
     font-style: italic;
-    font-size: 16px;
+    font-size: 14px;
+    letter-spacing: 1px;
 }
 
 h6 {
-    font-weight: 300;
-    font-size: 15px;
-    line-height: 15px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 12px;
     margin-top: 10px;
     margin-bottom: 10px;
 }
 
 h7 {
-    font-size: 15px;
+    font-size: 14px;
 }
 
 .subhead-line {
@@ -70,7 +71,7 @@ h7 {
     background: transparent;
     height: 0px;
     width: 100%;
-    top: 115px;
+    top: 100px;
 }
 
 .view-bottom-spacer {
@@ -120,8 +121,8 @@ h7 {
     font-family: 'akzidenz-grotesk_promedium';
     letter-spacing: 3px;
     text-decoration: none;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 4px;
+    margin-bottom: 1px;
 }
 
 /*nav overrides*/
@@ -133,12 +134,12 @@ h7 {
 }
 
 .navbar-nav>li>a {
-    padding-top:10px;
+    padding-top:9px;
 }
 
 .main-title {
     width: 100%;
-    padding-top: 11px;
+    padding-top: 12px;
 }
 
 .navbar-nav.nav-justified > li {
@@ -151,7 +152,7 @@ h7 {
 }
 
 .navbar {
-    height: 115px;
+    height: 100px;
     -webkit-transition: all ease-in-out 1.2s;
     box-shadow: rgba(0, 0, 0, 0.4) 0px 0px 35px 0px;
 }
@@ -239,13 +240,13 @@ a .main-header {
 .container-overlay div {
     font-weight: 400;
     letter-spacing: 1px;
-    font-size: 15px;
+    font-size: 14px;
     color: #404040;
-    line-height: 27px;
+    line-height: 25px;
 }
 
 a .nav-links {
-    font-weight: 400;
+    font-weight: 500;
     color: #6600FF;
     font-size: 12px;
     letter-spacing: 3px;
@@ -259,13 +260,13 @@ a .nav-links {
 
 .container-overlay textarea {
     border: 1px solid #CCCCFF;
-    background-color: #FOFOFO !important;
     display: block;
     padding: 6px 12px;
-    font-size: 16px;
-    color: #555;
+    font-size: 14px;
+    color: #404040;
+    letter-spacing: 2px;
     background-color: #fff;
-    border-radius: 4px;
+    border-radius: 0px;
     -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
     box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
     -webkit-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
@@ -274,14 +275,13 @@ a .nav-links {
 
 .container-overlay input {
     border: 1px solid #CCCCFF;
-    background-color: #FOFOFF !important;
     display: block;
     height: 44px;
     padding: 6px 12px;
-    font-size: 16px;
+    font-size: 14px;
     letter-spacing: 2px;
-    color: #000000;
-    border-radius: 4px;
+    color: #404040;
+    border-radius: 0px;
     -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
     box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
     -webkit-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
@@ -326,7 +326,7 @@ a .nav-links {
 
 /* Info pop-up styling start */
 .few-info {
-    min-width: 300px;
+    max-width: 300px;
     padding: 15px 0px 7px 12px
 }
 
@@ -415,11 +415,11 @@ a .nav-links {
 
 div.event-comingup {
     margin-top: 20px;
-    margin-bottom: -18px;
+    margin-bottom: -17px;
     color: #F62817;
     font-weight: 500;
     font-style: italic;
-    font-size: 15px;
+    font-size: 14px;
     letter-spacing: 1px;
 }
 /* Events end */
@@ -453,6 +453,7 @@ input.checkbox-input {
     letter-spacing: 2px;
     font-size: 17px;
     border: 1px solid #6600FF;
+    border-radius: 0px !important;
     -webkit-transition: all 0.1s ease-in-out;
     -moz-transition: all 0.1s ease-in-out;
     -o-transition: all 0.1s ease-in-out;
@@ -566,7 +567,7 @@ input.checkbox-input {
 
 .principal-name a {
     font-weight: 700 !important;
-    font-size: 15px !important;
+    font-size: 14px !important;
     letter-spacing: 1px !important;
     margin-top: -7px;
     margin-bottom: -4px;
@@ -594,7 +595,7 @@ input.checkbox-input {
 
 .stat-list div {
     color: #404040;
-    font-weight: 300;
+    font-weight: 400;
 }
 
 .stat-list a div {
@@ -754,8 +755,8 @@ p.continue-text {
 }
 
 .blog-contact {
-    width: 317px;
-    height: 254px;
+    width: 315px;
+    height: 252px;
     background-color: #6600FF;
 }
 
