--- a/public/partials/events.html
+++ b/public/partials/events.html
@@ -11,7 +11,7 @@
                     <div class="event-comingup">Next Event</div>
                     <h3>Fundraising Workshop with Clare Bullus</h3>
                     <p>
-                        <h7>Claire Bullus a female investor from <a href="http://cambridgecapitalgroup.co.uk/home.php">Cambridge Capital Group</a> who will speak to us on Skype the second or third week of April. As female entrepreneurs, this is a great opportunity for us! We can ask questions and clear our general doubts about business, pitching to investors, strategy, etc. Those who want to participate in the workshop, please send me by this Friday a 150 characters elevator pitch of your business, your name, country and any questions you have about pitching to investors.
+                        <h7>Claire Bullus a female investor from <a href="http://cambridgecapitalgroup.co.uk/home.php" target="_blank">Cambridge Capital Group</a> who will speak to us on Skype the second or third week of April. As female entrepreneurs, this is a great opportunity for us! We can ask questions and clear our general doubts about business, pitching to investors, strategy, etc. Those who want to participate in the workshop, please send me by this Friday a 150 characters elevator pitch of your business, your name, country and any questions you have about pitching to investors.
                         </h7>
                     </p>
                 </div>
@@ -19,7 +19,7 @@
                     <h6>May 1, 2014</h6>
                     <h6>St. Louis, Missouri</h6>
                     <div class="event-comingup">Upcoming in May</div>
-                    <a href="https://medium.com/female-entrepreneurs-of-the-world/f09f80a8cdf1"><h3>Brag Pitch Night</h3></a>
+                    <a href="https://medium.com/female-entrepreneurs-of-the-world/f09f80a8cdf1" target="_blank"><h3>Brag Pitch Night</h3></a>
                     <p>
                         <h7>We've all pitched our businesses a million times, but many women are really uncomfortable standing up and bragging (showing off, talking about their strengths) in front of others. We want (and need) to get better at this. What better way to get super vulnerable and step waaaay outside your comfort zone than with wine and good people?
                         </h7>
@@ -28,16 +28,16 @@
                 <div class="event-divider">
                     <h6>March 20, 2014 (7—8PM)</h6>
                     <h6>Santiago, Chile</h6>
-                    <a href="https://medium.com/female-entrepreneurs-of-the-world/f09f80a8cdf1"><h3>Brag Pitch Night</h3></a>
+                    <a href="https://medium.com/female-entrepreneurs-of-the-world/f09f80a8cdf1" target="_blank"><h3>Brag Pitch Night</h3></a>
                     <p>
-                        <h7>We've all pitched our businesses a million times, but many women are uncomfortable standing up and bragging (showing off, talking about their strengths) in front of others. We want (and need) to get better at this! Check out Jennifer Blumberg's take on brag pitching, <a href="https://medium.com/p/253e6d7bd10a">"Why I’m glad I was forced to brag"</a>.
+                        <h7>We've all pitched our businesses a million times, but many women are uncomfortable standing up and bragging (showing off, talking about their strengths) in front of others. We want (and need) to get better at this! Check out Jennifer Blumberg's take on brag pitching, <a href="https://medium.com/p/253e6d7bd10a" target="_blank">"Why I’m glad I was forced to brag"</a>.
                         </h7>
                     </p>
                 </div>
                 <div class="event-divider">
                     <h6>January 27, 2014 (6—8PM)</h6>
                     <h6>San Francisco, CA</h6>
-                    <a href="https://generalassemb.ly/education/women-in-tech-fireside-chat-with-freada-kapor-klein-and-heather-hiles">
+                    <a href="https://generalassemb.ly/education/women-in-tech-fireside-chat-with-freada-kapor-klein-and-heather-hiles" target="_blank">
                         <h3>Women in Tech: Fireside Chat with Freada Kapor Klein and Heather Hiles & Moderated by Vivek Wadhwa</h3>
                     </a>
                     
@@ -48,11 +48,11 @@
                 <div class="event-divider">
                     <h6>January 23, 2014 (6—8PM)</h6>
                     <h6>Santiago, Chile</h6>
-                    <a href="https://www.facebook.com/events/448780538556922/">
+                    <a href="https://www.facebook.com/events/448780538556922/" target="_blank">
                         <h3>Small Talk—A Conversation Mixer</h3>
                     </a>
                     <p>
-                        <a href="https://www.facebook.com/events/448780538556922/">
+                        <a href="https://www.facebook.com/events/448780538556922/" target="_blank">
                             <img src="https://fbcdn-sphotos-b-a.akamaihd.net/hphotos-ak-prn1/t31.0-8/883866_10102777883775453_844019930_o.jpg" width="550px" style="padding-top:10px;">
                         </a>
                     </p>
@@ -61,27 +61,27 @@
                 <div class="event-divider">                        
                     <h6>January 16, 2014 (7:30—10pm)</h6>
                     <h6>Santiago, Chile</h6>
-                    <a href="http://ignitesantiago.tumblr.com/post/73300957671/more-additions-to-the-lineup-a-few-good-women">
+                    <a href="http://ignitesantiago.tumblr.com/post/73300957671/more-additions-to-the-lineup-a-few-good-women" target="_blank">
                         <h3>FEW Blog Reading at Ignite Santiago</h3>
                     </a>
                     <p>
-                        <h7>Danielle Carruthers and Sarah Hebert, Principals at FEW, share excerpts from their writings at <a href="http://ignitesantiago.tumblr.com/">Ignite Santiago</a>. Read the full version of Danielle’s piece, <a href="https://medium.com/female-entrepreneurs-of-the-world/ee1dbe98910f">"Building The Mindset For Startup Success"</a> and Sarah’s piece, <a href="https://medium.com/female-entrepreneurs-of-the-world/23fbf2cfda62">"The Problem With Magical Thinking"</a>.
+                        <h7>Danielle Carruthers and Sarah Hebert, Principals at FEW, share excerpts from their writings at <a href="http://ignitesantiago.tumblr.com/" target="_blank">Ignite Santiago</a>. Read the full version of Danielle’s piece, <a href="https://medium.com/female-entrepreneurs-of-the-world/ee1dbe98910f" target="_blank">"Building The Mindset For Startup Success"</a> and Sarah’s piece, <a href="https://medium.com/female-entrepreneurs-of-the-world/23fbf2cfda62" target="_blank">"The Problem With Magical Thinking"</a>.
                         </h7>
                     </p>
                 </div>
                 <div class="event-divider">                        
                     <h6>December 6, 2013 (6—10pm)</h6>
                     <h6>Santiago, Chile</h6>
-                    <a href="https://medium.com/p/3e18e0261fdc">
+                    <a href="https://medium.com/p/3e18e0261fdc" target="_blank">
                         <h3>TEDxSantiagoWomen</h3>
                     </a>
                     <p>
-                        <a href="http://tedxsantiago.com/women.html">
+                        <a href="http://tedxsantiago.com/women.html" target="_blank">
                             <img src="https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-ash3/t31.0-8/1465785_648882455164055_697153128_o.jpg" width="650px" style="padding-top:10px;">
                         </a>
                     </p>
                     <p>
-                        <h7>Chile's first TEDxSantiagoWomen conference took place in Santiago, with inspirational talks by Carola Canelo, Montserrat Flores, Josefina Hughes, and special guest Brant Cooper in a speaker series entitled, “Invented Here.” Read our <a href="https://medium.com/p/3e18e0261fdc">press release</a>, view <a href="https://www.facebook.com/sarahhebert32/media_set?set=a.10152093737598324&type=1&l=a96df364a0">photos of the event</a>, and enjoy the talks <a href="https://www.youtube.com/playlist?list=PLsRNoUx8w3rNDMyxQ3jNQkDIYjlm4cPkq">via video</a> (in Spanish).</h7>
+                        <h7>Chile's first TEDxSantiagoWomen conference took place in Santiago, with inspirational talks by Carola Canelo, Montserrat Flores, Josefina Hughes, and special guest Brant Cooper in a speaker series entitled, “Invented Here.” Read our <a href="https://medium.com/p/3e18e0261fdc" target="_blank">press release</a>, view <a href="https://www.facebook.com/sarahhebert32/media_set?set=a.10152093737598324&type=1&l=a96df364a0" target="_blank">photos of the event</a>, and enjoy the talks <a href="https://www.youtube.com/playlist?list=PLsRNoUx8w3rNDMyxQ3jNQkDIYjlm4cPkq" target="_blank">via video</a> (in Spanish).</h7>
                     </p>
                 </div>
                 <div class="event-divider">
@@ -89,7 +89,7 @@
                     <h6>Santiago, Chile</h6>
                     <h3>Women and Fundraising with Gwen Edwards</h3>
                     <p>
-                        <h7><a href="http://www.gwenedwards.com/">Gwen Edwards</a> is a 30-year veteran of the venture capital space and Director at <a href="http://www.goldenseeds.com/">Golden Seeds</a>, one of the only VC firms focused on funding female led companies. Gwen speaks about the Golden Seeds investment process, unique challenges fundraising as women, and how best to position your business for a successful fundraising process.</h7>
+                        <h7><a href="http://www.gwenedwards.com/" target="_blank">Gwen Edwards</a> is a 30-year veteran of the venture capital space and Director at <a href="http://www.goldenseeds.com/" target="_blank">Golden Seeds</a>, one of the only VC firms focused on funding female led companies. Gwen speaks about the Golden Seeds investment process, unique challenges fundraising as women, and how best to position your business for a successful fundraising process.</h7>
                     </p>
                 </div>
                 <div class="event-divider">
@@ -103,7 +103,7 @@
                 <div class="event-divider">
                     <h6>November 15, 2013 (6—8pm)</h6>
                     <h6>Santiago, Chile</h6>
-                    <a href="https://medium.com/female-entrepreneurs-of-the-world/f09f80a8cdf1">
+                    <a href="https://medium.com/female-entrepreneurs-of-the-world/f09f80a8cdf1" target="_blank">
                         <h3>Brag Pitch Night</h3>
                     </a>
                     <p>
