--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -27,17 +27,18 @@ a h3:hover {
 h5 {
   font-weight: 400;
   font-style: italic;
-  font-size: 16px;
+  font-size: 14px;
+  letter-spacing: 1px;
 }
 h6 {
-  font-weight: 300;
-  font-size: 15px;
-  line-height: 15px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 12px;
   margin-top: 10px;
   margin-bottom: 10px;
 }
 h7 {
-  font-size: 15px;
+  font-size: 14px;
 }
 .subhead-line {
   border-bottom: 1px solid #6600FF;
@@ -58,7 +59,7 @@ h7 {
   background: transparent;
   height: 0px;
   width: 100%;
-  top: 115px;
+  top: 100px;
 }
 .view-bottom-spacer {
   height: 50px;
@@ -97,8 +98,8 @@ h7 {
   font-family: 'akzidenz-grotesk_promedium';
   letter-spacing: 3px;
   text-decoration: none;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-top: 4px;
+  margin-bottom: 1px;
 }
 /*nav overrides*/
 .nav > li > a:hover,
@@ -108,11 +109,11 @@ h7 {
   color: #6600FF;
 }
 .navbar-nav > li > a {
-  padding-top: 10px;
+  padding-top: 9px;
 }
 .main-title {
   width: 100%;
-  padding-top: 11px;
+  padding-top: 12px;
 }
 .navbar-nav.nav-justified > li {
   float: none;
@@ -122,7 +123,7 @@ h7 {
   background-color: rgba(255, 255, 255, 0.9);
 }
 .navbar {
-  height: 115px;
+  height: 100px;
   -webkit-transition: all ease-in-out 1.2s;
   box-shadow: rgba(0, 0, 0, 0.4) 0px 0px 35px 0px;
 }
@@ -204,12 +205,12 @@ a .main-header:visited {
 .container-overlay div {
   font-weight: 400;
   letter-spacing: 1px;
-  font-size: 15px;
+  font-size: 14px;
   color: #404040;
-  line-height: 27px;
+  line-height: 25px;
 }
 a .nav-links {
-  font-weight: 400;
+  font-weight: 500;
   color: #6600FF;
   font-size: 12px;
   letter-spacing: 3px;
@@ -224,13 +225,13 @@ a .nav-links:visited {
 }
 .container-overlay textarea {
   border: 1px solid #CCCCFF;
-  background-color: #FOFOFO !important;
   display: block;
   padding: 6px 12px;
-  font-size: 16px;
-  color: #555;
+  font-size: 14px;
+  color: #404040;
+  letter-spacing: 2px;
   background-color: #fff;
-  border-radius: 4px;
+  border-radius: 0px;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
@@ -238,14 +239,13 @@ a .nav-links:visited {
 }
 .container-overlay input {
   border: 1px solid #CCCCFF;
-  background-color: #FOFOFF !important;
   display: block;
   height: 44px;
   padding: 6px 12px;
-  font-size: 16px;
+  font-size: 14px;
   letter-spacing: 2px;
-  color: #000000;
-  border-radius: 4px;
+  color: #404040;
+  border-radius: 0px;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
@@ -354,11 +354,11 @@ a .nav-links:visited {
 }
 div.event-comingup {
   margin-top: 20px;
-  margin-bottom: -18px;
+  margin-bottom: -17px;
   color: #F62817;
   font-weight: 500;
   font-style: italic;
-  font-size: 15px;
+  font-size: 14px;
   letter-spacing: 1px;
 }
 /* Events end */
@@ -387,6 +387,7 @@ input.checkbox-input {
   letter-spacing: 2px;
   font-size: 17px;
   border: 1px solid #6600FF;
+  border-radius: 0px !important;
   -webkit-transition: all 0.1s ease-in-out;
   -moz-transition: all 0.1s ease-in-out;
   -o-transition: all 0.1s ease-in-out;
@@ -483,7 +484,7 @@ input.checkbox-input {
 }
 .principal-name a {
   font-weight: 700 !important;
-  font-size: 15px !important;
+  font-size: 14px !important;
   letter-spacing: 1px !important;
   margin-top: -7px;
   margin-bottom: -4px;
@@ -507,7 +508,7 @@ input.checkbox-input {
 }
 .stat-list div {
   color: #404040;
-  font-weight: 300;
+  font-weight: 400;
 }
 .stat-list a div:hover {
   color: #6600FF;
@@ -640,8 +641,8 @@ p.continue-text {
   color: white;
 }
 .blog-contact {
-  width: 317px;
-  height: 254px;
+  width: 315px;
+  height: 252px;
   background-color: #6600FF;
 }
 /* Blog end */
